<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.ganteater.plugins</groupId>
		<artifactId>ae-plugins</artifactId>
		<version>1.2.11</version>
		<relativePath></relativePath>
	</parent>

	<artifactId>ai-ae-plugin</artifactId>
	<version>1.2.12-SNAPSHOT</version>

	<name>AI Anteater Plugin</name>
	<description>Module provides anteater plugin for AI.</description>
	<url>https://ganteater.com/ae-plugins</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.openai</groupId>
			<artifactId>openai-java</artifactId>
			<version>4.8.0</version>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.ganteater</groupId>
					<artifactId>ae-maven-plugin</artifactId>
					<dependencies>
						<dependency>
							<groupId>com.ganteater.plugins</groupId>
							<artifactId>web-ae-plugin</artifactId>
							<version>1.2.9</version>
						</dependency>
						<dependency>
							<groupId>com.formdev</groupId>
							<artifactId>flatlaf</artifactId>
							<version>3.6.2</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>com.ganteater</groupId>
					<artifactId>ae-maven-plugin</artifactId>
					<version>1.2.11</version>
					<dependencies>
						<dependency>
							<groupId>${project.groupId}</groupId>
							<artifactId>${project.artifactId}</artifactId>
							<version>${project.version}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/@guidance.txt</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jsonschema2pojo</groupId>
				<artifactId>jsonschema2pojo-maven-plugin</artifactId>
				<version>1.2.2</version>
				<configuration>
					<sourceDirectory>${basedir}/src/main/resources/schema</sourceDirectory>
					<targetPackage>com.ganteater.ai.model</targetPackage>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.machanism.machai</groupId>
				<artifactId>gw-maven-plugin</artifactId>
				<configuration>
					<genai>CodeMie:gpt-5-2-2025-12-11</genai>
					<serverId>CodeMie</serverId>
					<instructions>
						<instruction>
							https://sourceforge.net/p/anteater/code/HEAD/tree/trunk/src/site/resources/instructions/ae-base-instruction.txt?format=raw</instruction>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>pack</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://github.com/ganteater/ai-ae-plugin.git</connection>
		<developerConnection>
			scm:git:https://github.com/ganteater/ai-ae-plugin.git</developerConnection>
		<url>https://github.com/ganteater/ai-ae-plugin</url>
	</scm>

	<issueManagement>
		<url>https://github.com/ganteater/ai-ae-plugin/issues</url>
	</issueManagement>

	<developers>
		<developer>
			<name>Viktor Tovstyi</name>
			<email>viktor.tovstyi@gmail.com</email>
		</developer>
	</developers>
</project>